tests/security/shapeSourcesAwaitReturn/output.txt
ERROR: TaintedData - input.hack:12:10 - Data from a user secret found its way to generic output